# MyWaifu

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
bot/: Cargo.toml
bot/src/: config.rs  main.rs
bot/src/checks/: accounts.rs  alliances.rs  mod.rs
bot/src/commands/: accounts.rs  alliances.rs  interactions.rs  mod.rs  shop.rs  summon.rs
bot/src/components/: choice.rs  confirm.rs  dates.rs  mod.rs  paginator.rs  shop.rs
bot/src/database/mongo/: mod.rs
bot/src/database/postgres/: mod.rs
bot/src/models/: account.rs  mod.rs  waifu.rs
bot/src/utils/: fmt.rs  mod.rs
payments/: Cargo.toml  package.json
payments/.wrangler/state/v3/kv/4b46d1cef9c4480ca08e2a1f57dd1546/: db.sqlite
payments/src/: fulfillments.rs  lib.rs  models.rs  stripe.rs
